core/tests/integration/typecheck/fail/enum_variant_not_in_type.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::ExtraRow'
#
# [test.metadata.expectation]
# ident = 'foo'
'foo : [| 'bar |]